# SimpsonsGraphql

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
simpsons/api/: __init__.py  main.py
simpsons/client/: simpsons_api_client.py  simpsons_quote_api_client.py
simpsons/controller/: simpsons_controller.py
simpsons/object_types/: person.py  quotes.py
simpsons/query/: query.py
test/: conftest.py
test/integration_test/: test_query.py
